--- a/.github/workflows/pong_release_workflow.yaml
+++ b/.github/workflows/pong_release_workflow.yaml
@@ -51,3 +51,30 @@ jobs:
           commit_user_email: gitops-bot@example.com
           commit_author: GitOps Bot <gitops-bot@panagiotispetridis.com>
           file_pattern: 'services/pong/deploy/Chart.yaml'
+
+  release-chart:
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.10.0
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.4.1
+        with:
+          charts_dir: services/pong/deploy
+        env:
+          CR_TOKEN: "${{ secrets.GH_TOKEN }}"
