--- a/.github/workflows/pong_release_workflow.yaml
+++ b/.github/workflows/pong_release_workflow.yaml
@@ -8,7 +8,7 @@ on:
       - 'services/pong/**'
 
 jobs:
-  publish:
+  build-chart:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -56,6 +56,7 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
+    needs: build-chart
     steps:
       - name: Checkout
         uses: actions/checkout@v2
