--- a/.github/workflows/ping_release_workflow.yaml
+++ b/.github/workflows/ping_release_workflow.yaml
@@ -29,7 +29,7 @@ jobs:
         id: vars
         run: |
           calculatedSha=$(git rev-parse --short ${{ github.sha }})
-          echo "::set-output name=short_sha::$calculatedSha"
+          echo "short_sha=$calculatedSha" >> $GITHUB_OUTPUT
 
       - name: Build and push
         uses: docker/build-push-action@v3
