--- a/.github/workflows/pong_release_workflow.yaml
+++ b/.github/workflows/pong_release_workflow.yaml
@@ -29,7 +29,7 @@ jobs:
         id: vars
         run: |
           calculatedSha=$(git rev-parse --short ${{ github.sha }})
-          echo "::set-output name=short_sha::$calculatedSha"
+          echo "short_sha=$calculatedSha" >> $GITHUB_OUTPUT
 
       - name: Build and push
         uses: docker/build-push-action@v3
@@ -76,6 +76,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
         with:
-          charts_dir: services/pong/deploy
+          charts_dir: services/pong
         env:
           CR_TOKEN: "${{ secrets.GH_TOKEN }}"
