--- a/services/pong/deploy/templates/deployment.yaml
+++ b/services/pong/deploy/templates/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "pong.fullname" . }}
   labels:
+    app: {{ include "pong.fullname" . | quote }}
     {{- include "pong.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
@@ -18,6 +19,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
+        app: {{ include "pong.fullname" . | quote }}
         {{- include "pong.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
