--- a/services/pong/deploy/templates/deployment.yaml
+++ b/services/pong/deploy/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
+            - name: grpc
               containerPort: 80
               protocol: TCP
           env:
