removed unnecessary yaml files

--- a/services/pong/deploy/templates/deployment.yaml
+++ b/services/pong/deploy/templates/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "pong.fullname" . }}
   labels:
     app: {{ include "pong.fullname" . | quote }}
+    version: {{ .Chart.AppVersion | quote }}
     {{- include "pong.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
