--- a/infra/istio/destination-rules.yaml
+++ b/infra/istio/destination-rules.yaml
@@ -3,11 +3,8 @@ kind: DestinationRule
 metadata:
   name: dr-istio-ping
 spec:
-  host: ping
-  trafficPolicy:
-    loadBalancer:
-      simple: ROUND_ROBIN
+  host: ping.default.svc.cluster.local
   subsets:
-    - name: v1
-      labels:
-        version: "v1"
+  - name: v1
+    labels:
+      version: v1
