--- a/services/ping/deploy/templates/service.yaml
+++ b/services/ping/deploy/templates/service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: {{ include "ping.fullname" . }}
   labels:
+    version: v1
     {{- include "ping.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
