removed version label from ping service

--- a/infra/istio/virtual-service.yaml
+++ b/infra/istio/virtual-service.yaml
@@ -7,13 +7,10 @@ spec:
     - "*"
   gateways:
     - grpc-gateway
-  tcp:
-  - match:
-      - port: 80
-    route:
+  http:
+  - route:
     - destination:
         port:
            number: 80 
         host: ping.default.svc.cluster.local
         subset: v1
-      weight: 100
