--- a/infra/istio/gateway.yaml
+++ b/infra/istio/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: grpc-gateway
+  name: http-gateway
 spec:
   selector:
     istio: ingressgateway
