--- a/infra/istio/virtual-service.yaml
+++ b/infra/istio/virtual-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: grpc-vs
+  name: http-vs
 spec:
   hosts:
     - "*"
   gateways:
-    - grpc-gateway
+    - http-gateway
   http:
   - route:
     - destination:
