--- a/infra/istio/gateway.yaml
+++ b/infra/istio/gateway.yaml
@@ -1,13 +1,13 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: http-gateway
+  name: ping-web
 spec:
   selector:
     istio: ingressgateway
   servers:
   - port:
-      number: 8888
+      number: 80
       name: http
       protocol: HTTP
     hosts:
