setup efk stack

--- a/infra/argocd/applications/ping.yaml
+++ b/infra/argocd/applications/ping.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ping-application
+  name: ping
   namespace: argocd
   labels:
     name: ping
